--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <!-- Primary Meta Tags -->
     <title>Onward Dominicans - Dominican Community News & Culture</title>
-    <meta name="title" content="Onward Dominicans - Dominican Community News & Culture">
+    <meta name="title" content="Dominican community, Dominican culture, Dominican news, merengue, bachata, Dominican food, mangu, sancocho, Dominican independence, Caribbean culture, Latino community, Dominican traditions, Dominican events, Dominican recipes, Dominican heritage, Dominican festivals, Dominican music, Dominican dance, Dominican history">
     <meta name="description" content="Stay connected with the Dominican community through news, cultural events, traditional recipes, and stories that celebrate our rich heritage and vibrant culture.">
     <meta name="keywords" content="Dominican community, Dominican culture, Dominican news, merengue, bachata, Dominican food, mangu, Dominican independence, Caribbean culture, Latino community">
     <meta name="author" content="Onward Dominicans">
@@ -114,7 +114,149 @@
   }
 }
 </script>
-</head>
+
+    <!-- Organization Schema -->
+    <script type="application/ld+json">
+{
+      "@context": "https://schema.org",
+      "@type": "NewsMediaOrganization",
+      "name": "Onward Dominicans",
+      "url": "https://onward-dominicans.vercel.app/",
+      "logo": {
+            "@type": "ImageObject",
+            "url": "https://onward-dominicans.vercel.app/logo.png",
+            "width": 200,
+            "height": 200
+      },
+      "description": "Dominican community news and cultural platform connecting Dominicans worldwide",
+      "foundingDate": "2024",
+      "areaServed": {
+            "@type": "Place",
+            "name": "Worldwide Dominican Community"
+      },
+      "audience": {
+            "@type": "Audience",
+            "audienceType": "Dominican Community"
+      },
+      "publishingPrinciples": "https://onward-dominicans.vercel.app/about",
+      "sameAs": [
+            "https://facebook.com/onwarddominicans",
+            "https://twitter.com/onwarddominicans",
+            "https://instagram.com/onwarddominicans"
+      ],
+      "contactPoint": {
+            "@type": "ContactPoint",
+            "contactType": "Editorial",
+            "email": "contact@onwarddominicans.com"
+      }
+}
+    </script>
+
+    <!-- FAQ Schema -->
+    <script type="application/ld+json">
+{
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+            {
+                  "@type": "Question",
+                  "name": "What is Onward Dominicans?",
+                  "acceptedAnswer": {
+                        "@type": "Answer",
+                        "text": "Onward Dominicans is a digital platform connecting the Dominican community worldwide through news, cultural content, traditional recipes, and community stories."
+                  }
+            },
+            {
+                  "@type": "Question",
+                  "name": "What type of content does Onward Dominicans publish?",
+                  "acceptedAnswer": {
+                        "@type": "Answer",
+                        "text": "We publish Dominican community news, cultural articles, traditional recipes, event coverage, and stories celebrating Dominican heritage and traditions."
+                  }
+            },
+            {
+                  "@type": "Question",
+                  "name": "How can I stay updated with Dominican community news?",
+                  "acceptedAnswer": {
+                        "@type": "Answer",
+                        "text": "Visit our news section regularly, follow our social media accounts, or bookmark our website for the latest Dominican community updates and cultural content."
+                  }
+            }
+      ]
+}
+    </script>
+  
+    <!-- Organization Schema -->
+    <script type="application/ld+json">
+{
+      "@context": "https://schema.org",
+      "@type": "NewsMediaOrganization",
+      "name": "Onward Dominicans",
+      "url": "https://onward-dominicans.vercel.app/",
+      "logo": {
+            "@type": "ImageObject",
+            "url": "https://onward-dominicans.vercel.app/logo.png",
+            "width": 200,
+            "height": 200
+      },
+      "description": "Dominican community news and cultural platform connecting Dominicans worldwide",
+      "foundingDate": "2024",
+      "areaServed": {
+            "@type": "Place",
+            "name": "Worldwide Dominican Community"
+      },
+      "audience": {
+            "@type": "Audience",
+            "audienceType": "Dominican Community"
+      },
+      "publishingPrinciples": "https://onward-dominicans.vercel.app/about",
+      "sameAs": [
+            "https://facebook.com/onwarddominicans",
+            "https://twitter.com/onwarddominicans",
+            "https://instagram.com/onwarddominicans"
+      ],
+      "contactPoint": {
+            "@type": "ContactPoint",
+            "contactType": "Editorial",
+            "email": "contact@onwarddominicans.com"
+      }
+}
+    </script>
+
+    <!-- FAQ Schema -->
+    <script type="application/ld+json">
+{
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+            {
+                  "@type": "Question",
+                  "name": "What is Onward Dominicans?",
+                  "acceptedAnswer": {
+                        "@type": "Answer",
+                        "text": "Onward Dominicans is a digital platform connecting the Dominican community worldwide through news, cultural content, traditional recipes, and community stories."
+                  }
+            },
+            {
+                  "@type": "Question",
+                  "name": "What type of content does Onward Dominicans publish?",
+                  "acceptedAnswer": {
+                        "@type": "Answer",
+                        "text": "We publish Dominican community news, cultural articles, traditional recipes, event coverage, and stories celebrating Dominican heritage and traditions."
+                  }
+            },
+            {
+                  "@type": "Question",
+                  "name": "How can I stay updated with Dominican community news?",
+                  "acceptedAnswer": {
+                        "@type": "Answer",
+                        "text": "Visit our news section regularly, follow our social media accounts, or bookmark our website for the latest Dominican community updates and cultural content."
+                  }
+            }
+      ]
+}
+    </script>
+  </head>
 <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
